<resources>
    <string name="app_name">MiPymes</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="nombre">Nombre:</string>
    <string name="login">login</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="perfil">Perfil</string>
    <string name="introduzca_una_publicaci_n">Introduzca una publicación</string>
    <string name="ventas">Ventas</string>
    <string name="inventario">Inventario</string>
    <string name="opciones">Opciones</string>
    <string name="name">Name</string>

</resources>
