<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    tools:context="inicioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inicioFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/button_navigation"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:itemBackground="@color/general_blue"
        app:itemIconTint="@color/bacground"
        app:itemTextColor="@color/bacground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_menu" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/recordatorio_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/item_back_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recordatorio_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="@string/introduzca_una_publicaci_n"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/recordatorio_bar"
        app:layout_constraintEnd_toEndOf="@+id/recordatorio_bar"
        app:layout_constraintStart_toStartOf="@+id/recordatorio_bar"
        app:layout_constraintTop_toTopOf="@+id/recordatorio_bar"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="@+id/recordatorio_bar"
        app:layout_constraintEnd_toEndOf="@+id/recordatorio_bar"
        app:layout_constraintStart_toEndOf="@+id/recordatorio_input"
        app:layout_constraintTop_toTopOf="@+id/recordatorio_bar"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/Perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordatorio_bar" />

    <Button
        android:id="@+id/Ventas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ventas"
        app:layout_constraintBottom_toTopOf="@+id/button_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Perfil"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/Inventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventario"
        app:layout_constraintBottom_toTopOf="@+id/button_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ventas"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/Opciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opciones"
        app:layout_constraintBottom_toTopOf="@+id/button_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Inventario" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>